# papilio-loader-mcp

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CHANGES.md  HTTP_SERVER_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INTERFACE_COMPARISON.md  QUICKSTART.md  QUICKSTART_WEB.md  README.md  VSCODE_SETUP.md  WEB_IMPLEMENTATION.md  WEB_INTERFACE_GUIDE.md  build.ps1  build.py  esptool.spec  esptool_entry.py  installer.iss  main.py  package-lock.json  package.json  papilio_loader.spec  pesptool.spec  project-log.ipynb  prompt.md  pyproject.toml  requirements.txt  start.ps1  start_api.py  start_combined_server.py  start_desktop.py  start_mcp_server.py  test_saved_files.py
.github/: copilot-settings.json
debugging/: test_basic.py  test_mcp_server.py  test_serial_ports.py
documentation/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  DESKTOP_APP.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  SAVED_FILES_FEATURE.md  VSCODE_SETUP.md  WEB_INTERFACE_GUIDE.md
public/: app.js  index.html
src/: index.ts  mcp-server.ts  papilio-loader.ts  web-server.ts
src/papilio_loader_mcp/: __init__.py  api.py  config.py  database.py  desktop.py  file_detector.py  http_server.py  server.py  tray.py
src/papilio_loader_mcp/tools/: device_info.py  esp_flash.py  flash_status.py  fpga_flash.py  serial_ports.py
temp/: .gitkeep
templates/: login.html  upload.html
testing/: analyze_bin_types.py  test_com4_device.py  test_file_detector.py  test_flash_both.py  test_ports.py  test_web_setup.py
