[project]
name = "papilio-loader-mcp"
version = "0.1.0"
description = "MCP server for loading FPGA bit files and ESP32 firmware over network"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esptool>=4.8.1",
    "fastapi>=0.127.0",
    "mcp>=1.25.0",
    "pyserial>=3.5",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.21",
    "starlette>=0.41.0",
    "sse-starlette>=2.3.0",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.0.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
desktop = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
papilio-loader-mcp = "papilio_loader_mcp.server:main"
papilio-loader-desktop = "papilio_loader_mcp.desktop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/papilio_loader_mcp"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/papilio-loader-mcp/templates"
"tools/pesptool" = "share/papilio-loader-mcp/tools/pesptool"
